--- a/src/App.css
+++ b/src/App.css
@@ -2,29 +2,61 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header {
+  background-color: #252;    
+  color: white;
+  font-size: 20px
 }
 
-.App-header {
+.footer {  
+  color: black;
+  font-size: 8px
+}
+
+h3 {
   background-color: #252;    
   color: white;
 }
 
-.App-intro {
-  font-size: large;
+.result-table table {  
+  border: 1px solid rgb(23, 206, 23);
+  background-color: #D4EED1;
+  width: 100%;
+  text-align: center;  
+}
+.result-table table tbody td, .result-table table thead th {
+  border: 1px solid rgb(23, 206, 23);
+  padding: 3px 2px;
+}
+.result-table table tbody td {
+  font-size: 13px;
+}
+.result-table table thead {
+  background: #252;  
+  border-bottom: 0px solid #444444;
+}
+.result-table table thead th {
+  font-size: 19px;
+  font-weight: bold;
+  color: #F0F0F0;
+  text-align: center;
+  border-left: 2px solid #24943A;
 }
 
-App-result-table { 
-  text-align: center; 
+.button {
+	background-color:#252;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #252;
+	display:inline-block;
+	cursor:pointer;
+	color:white;	
+	padding:16px 31px;
+	
+}
+.button:hover {
+	background-color:#93dd6f;
 }
 
-App-result-table, table, th, td {
-  border: 1px solid black
-}
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
